# amanda_clone

./: Dockerfile  Untitled.ipynb  deploy-deocker-secret.py  pyproject.toml  requirements.txt
.config/dev_dooh/: amanda_clone.nginx  gunicorn.py  supervisord.conf
.config/local_dev/: amanda_clone.nginx  gunicorn.py  supervisord.conf
.config/production/: gunicorn.py  supervisord.conf
app/.config/dev_dooh/: amanda.nginx  gunicorn.py
app/config/: settings.py  storages.py  urls.py
app/config/settings/: __init__.py  base.py  dev.py  dev_dooh.py  production.py
app/members/: admin.py  models.py  urls.py  views.py
app/members/migrations/: 0001_initial.py  0002_auto_20200328_0239.py  0003_userprofile_media.py  0004_auto_20200328_0312.py  0005_remove_userprofile_age.py  0006_auto_20200328_0321.py  0007_auto_20200330_1112.py
