[tool.poetry]
name = "amanda_clone"
version = "0.1.0"
description = ""
authors = ["kimdooh2019 <choiinhee2020@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.12.31"
django = "<3.0"
django-extensions = "^2.2.9"
django-storages = "^1.9.1"
gunicorn = "^20.0.4"
notebook = "^6.0.3"
pillow = "^7.0.0"
psycopg2-binary = "^2.8.4"
supervisor = "^4.1.0"
beautifulsoup4 = "^4.8.2"
requests = "^2.23.0"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
